--- a/rbac-admin/pom.xml
+++ b/rbac-admin/pom.xml
@@ -5,39 +5,60 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.powernode</groupId>
-    <artifactId>emp-admin</artifactId>
+    <artifactId>rbac-admin</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>emp-admin</name>
+    <name>rbac-admin</name>
     <packaging>war</packaging>
-
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
-        <spring.version>5.3.23</spring.version>
-        <jackson.version>2.12.3</jackson.version>
-        <mybatis.version>3.5.11</mybatis.version>
-        <mybatis-spring.verison>2.0.7</mybatis-spring.verison>
-        <page-helper.version>5.3.2</page-helper.version>
-        <mysql.version>5.1.49</mysql.version>
+        <junit.version>5.7.1</junit.version>
+        <servlet.version>3.1.0</servlet.version>
+        <jsp.version>2.3.3</jsp.version>
+        <hutool.version>5.7.11</hutool.version>
+        <fastjson.version>1.2.75</fastjson.version>
+        <spring.version>5.3.4</spring.version>
+        <mybatis.version>3.5.7</mybatis.version>
+        <pageHelper.version>5.2.0</pageHelper.version>
+        <mysql.version>8.0.26</mysql.version>
+        <mybatis-spring.version>2.0.6</mybatis-spring.version>
+        <!--日志包版本-->
+        <log4j-core.version>2.14.1</log4j-core.version>
+        <logging.version>1.2</logging.version>
+        <log4j.version>1.2.17</log4j.version>
         <lombok.version>1.18.24</lombok.version>
+        <jackson.version>2.12.5</jackson.version>
+        <fileUpload.version>1.4</fileUpload.version>
+        <servlet.version>4.0.1</servlet.version>
+        <druid.version>1.2.15</druid.version>
     </properties>
 
     <dependencies>
-        <!--servlet的依赖开始-->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
+            <version>${servlet.version}</version>
             <scope>provided</scope>
         </dependency>
-        <!--servlet的依赖结束-->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
 
-        <!--spring的依赖开始-->
+        <!--spring+springmvc相关的依赖开始-->
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-context-support</artifactId>
+            <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
         </dependency>
         <dependency>
@@ -47,85 +68,83 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
             <version>${spring.version}</version>
         </dependency>
-        <!--spring的依赖结束-->
-        <!--springmvc的依赖开始-->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
-        <!--springmvc的依赖结束-->
-        <!--mybatis的依赖开始-->
+        <!--spring+springmvc相关的依赖结束-->
+        <!--mybatis相关核心包-->
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <version>${mybatis.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis-spring</artifactId>
-            <version>${mybatis-spring.verison}</version>
-        </dependency>
-        <!--mybatis的依赖结束-->
-        <!--分页的依赖开始-->
+        <!--mybatis分页插件-->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper</artifactId>
-            <version>${page-helper.version}</version>
+            <version>${pageHelper.version}</version>
         </dependency>
-        <!--分页的依赖结束-->
-        <!--mysql的依赖开始-->
+        <!--spring 和mybatis的集成包-->
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>${mybatis-spring.version}</version>
+        </dependency>
+        <!--mysql的驱动包-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.version}</version>
         </dependency>
-        <!--mysql的依赖结束-->
-        <!--日志的依赖开始-->
+        <!-- log4j-core -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j-core.version}</version>
+        </dependency>
         <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
-            <version>1.2</version>
+            <version>${logging.version}</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <version>${log4j.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.13.3</version>
-        </dependency>
-        <!--日志的依赖结束-->
-        <!--其它依赖-->
+        <!--引入lombok-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
         </dependency>
+        <!--引入jackson的包-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.8.11</version>
+            <version>${hutool.version}</version>
         </dependency>
+        <!-- 文件上传相关依赖jar  -->
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
-            <version>1.4</version>
+            <version>${fileUpload.version}</version>
         </dependency>
+        <!--druid数据源-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.2.15</version>
+            <version>${druid.version}</version>
         </dependency>
     </dependencies>
 
