--- a/rbac-ui/package.json
+++ b/rbac-ui/package.json
@@ -40,7 +40,8 @@
     "vue-splitpane": "1.0.4",
     "vuedraggable": "2.20.0",
     "vuex": "3.1.0",
-    "xlsx": "0.14.1"
+    "xlsx": "0.14.1",
+    "@riophae/vue-treeselect": "0.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
